[gd_scene load_steps=12 format=3 uid="uid://de36hriw6g0no"]

[ext_resource type="Texture2D" uid="uid://b5nn4g2mkoqyp" path="res://flappy-bird-assets-master/sprites/base.png" id="1_48cne"]
[ext_resource type="Script" uid="uid://dgvxrt41fntks" path="res://Scenes/main.gd" id="1_vom4c"]
[ext_resource type="PackedScene" uid="uid://c2nx2nh1m6g6k" path="res://Scenes/r_pipe.tscn" id="2_21xkr"]
[ext_resource type="PackedScene" uid="uid://djcd073if3nre" path="res://Scenes/bird.tscn" id="2_f8qfn"]
[ext_resource type="PackedScene" uid="uid://dw3heg7fj1uhh" path="res://Scenes/killzone.tscn" id="4_21xkr"]
[ext_resource type="Script" uid="uid://bnpjoa4m2xvi1" path="res://Scripts/texture_rect.gd" id="4_344ge"]
[ext_resource type="Texture2D" uid="uid://b121h8dmv50e8" path="res://flappy-bird-assets-master/sprites/background-day.png" id="4_ygbfh"]
[ext_resource type="PackedScene" uid="uid://b7x4dg4dvh5up" path="res://Scenes/hud.tscn" id="7_6bp64"]
[ext_resource type="AudioStream" uid="uid://cfg0m51d1lne5" path="res://flappy-bird-assets-master/audio/point.wav" id="9_ynf5e"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_cnoag"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kry3j"]

[node name="Main" type="Node"]
script = ExtResource("1_vom4c")
pipes_scene = ExtResource("2_21xkr")

[node name="City" type="Parallax2D" parent="."]
repeat_size = Vector2(480, 0)
autoscroll = Vector2(-20, 0)
follow_viewport = false

[node name="TextureRect" type="TextureRect" parent="City"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -121.0
offset_right = 479.0
offset_bottom = 733.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_ygbfh")
script = ExtResource("4_344ge")

[node name="GroundMain" type="StaticBody2D" parent="."]
z_index = 2
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundMain"]
position = Vector2(232, 579)
shape = SubResource("WorldBoundaryShape2D_cnoag")

[node name="Ground" type="Parallax2D" parent="GroundMain"]
repeat_size = Vector2(480, 0)
autoscroll = Vector2(-200, 0)
repeat_times = 2

[node name="TextureRect" type="TextureRect" parent="GroundMain/Ground"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 561.0
offset_right = 480.0
offset_bottom = 721.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_48cne")

[node name="Killzone" parent="GroundMain/Ground" instance=ExtResource("4_21xkr")]
collision_mask = 2
script = null

[node name="Ground" type="CollisionShape2D" parent="GroundMain/Ground/Killzone"]
position = Vector2(112, 566)
shape = SubResource("WorldBoundaryShape2D_kry3j")
one_way_collision_margin = 0.0

[node name="Bird" parent="." instance=ExtResource("2_f8qfn")]
z_index = 2
position = Vector2(117, 267)
collision_mask = 3

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.25

[node name="HUD" parent="." instance=ExtResource("7_6bp64")]

[node name="ScoreSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ynf5e")
bus = &"SFX"

[connection signal="done" from="." to="HUD" method="screen_game_over"]
[connection signal="hit" from="Bird" to="." method="game_over"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="HUD" to="." method="new_game"]
[connection signal="start" from="HUD" to="." method="start_game"]
